--- a/test/fixtures/votes.yml
+++ b/test/fixtures/votes.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  story_id: 1
-
+  story: one
 two:
-  story_id: 1
+  story: one
