--- a/test/fixtures/stories.yml
+++ b/test/fixtures/stories.yml
@@ -3,6 +3,8 @@
 one:
   name: My old weblog
   link: http://ruprict.net/
+  user: glenn
 two:
   name: SitePoint Forums
   link: http://community.sitepoint.com
+  user: glenn
