--- a/test/fixtures/stories.yml
+++ b/test/fixtures/stories.yml
@@ -4,7 +4,9 @@ one:
   name: My old weblog
   link: http://ruprict.net/
   user: glenn
+  votes_count: 2
 two:
   name: SitePoint Forums
   link: http://community.sitepoint.com
   user: glenn
+  votes_count: 0
